# llmpipe

./: README.md  config.example.toml  pyproject.toml
src/llmpipe/: __main__.py  ansi.py  client.py  config.py  protocol.py  server.py  session.py
tests/: test_ansi.py  test_protocol.py
