[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmpipe"
version = "0.1.0"
description = "WebSocket server that holds open interactive Claude Code sessions"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pyte>=0.8.2",
    "websockets>=12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
llmpipe = "llmpipe.__main__:main"
llmpipe-client = "llmpipe.client:main"

[tool.hatch.build.targets.wheel]
packages = ["src/llmpipe"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
